Fitting ellipses is hard

--- a/Red-Clump-Location.ipynb
+++ b/Red-Clump-Location.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -610,7 +610,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'list'>\n"
+      "<class 'list'>\n",
+      "[Path(array([[  0.88500003,  18.122275  ],\n",
+      "       [  0.88893753,  18.12900028],\n",
+      "       [  0.88500003,  18.14392712],\n",
+      "       [  0.87900003,  18.12900028],\n",
+      "       [  0.88500003,  18.122275  ]]), None), Path(array([[  1.01670374,  18.298439  ],\n",
+      "       [  1.01680314,  18.29900036],\n",
+      "       [  1.02500004,  18.32925234],\n",
+      "       [  1.02655559,  18.33300037],\n",
+      "       [  1.02500004,  18.35566705],\n",
+      "       [  1.02374363,  18.36700039],\n",
+      "       [  1.02500004,  18.37343282],\n",
+      "       [  1.0296667 ,  18.4010004 ],\n",
+      "       [  1.02832055,  18.43500042],\n",
+      "       [  1.0270364 ,  18.46900043],\n",
+      "       [  1.03125536,  18.50300045],\n",
+      "       [  1.02816133,  18.53700047],\n",
+      "       [  1.02500004,  18.56080048],\n",
+      "       [  1.02433337,  18.57100048],\n",
+      "       [  1.01523533,  18.6050005 ],\n",
+      "       [  1.01172596,  18.63900051],\n",
+      "       [  1.01100003,  18.64406434],\n",
+      "       [  1.00561542,  18.67300053],\n",
+      "       [  0.9996667 ,  18.70700054],\n",
+      "       [  0.99700003,  18.71002277],\n",
+      "       [  0.98349415,  18.74100056],\n",
+      "       [  0.98300003,  18.74342913],\n",
+      "       [  0.97358624,  18.77500057],\n",
+      "       [  0.96900003,  18.78818425],\n",
+      "       [  0.96136367,  18.80900059],\n",
+      "       [  0.95500003,  18.81709583],\n",
+      "       [  0.94227276,  18.8430006 ],\n",
+      "       [  0.94100003,  18.84589422],\n",
+      "       [  0.92700003,  18.84471778],\n",
+      "       [  0.91300003,  18.86078043],\n",
+      "       [  0.89900003,  18.86551413],\n",
+      "       [  0.88650003,  18.87700062],\n",
+      "       [  0.88500003,  18.87794506],\n",
+      "       [  0.88397564,  18.87700062],\n",
+      "       [  0.87100003,  18.8438724 ],\n",
+      "       [  0.85700002,  18.85694061],\n",
+      "       [  0.84300002,  18.85203858],\n",
+      "       [  0.8395412 ,  18.8430006 ],\n",
+      "       [  0.82900002,  18.82102079],\n",
+      "       [  0.81500002,  18.81296726],\n",
+      "       [  0.81307845,  18.80900059],\n",
+      "       [  0.80100002,  18.79006387],\n",
+      "       [  0.79523531,  18.77500057],\n",
+      "       [  0.78700002,  18.76095098],\n",
+      "       [  0.77958211,  18.74100056],\n",
+      "       [  0.77534901,  18.70700054],\n",
+      "       [  0.77300002,  18.68768235],\n",
+      "       [  0.77039218,  18.67300053],\n",
+      "       [  0.76214287,  18.63900051],\n",
+      "       [  0.75900002,  18.6170005 ],\n",
+      "       [  0.75783335,  18.6050005 ],\n",
+      "       [  0.75652943,  18.57100048],\n",
+      "       [  0.75826318,  18.53700047],\n",
+      "       [  0.75900002,  18.53062546],\n",
+      "       [  0.76233947,  18.50300045],\n",
+      "       [  0.76297635,  18.46900043],\n",
+      "       [  0.7678369 ,  18.43500042],\n",
+      "       [  0.76850528,  18.4010004 ],\n",
+      "       [  0.77300002,  18.38371706],\n",
+      "       [  0.77885818,  18.36700039],\n",
+      "       [  0.78269233,  18.33300037],\n",
+      "       [  0.78700002,  18.29982963],\n",
+      "       [  0.7872414 ,  18.29900036],\n",
+      "       [  0.80100002,  18.26871909],\n",
+      "       [  0.80250771,  18.26500034],\n",
+      "       [  0.81500002,  18.24233367],\n",
+      "       [  0.82238184,  18.23100033],\n",
+      "       [  0.82900002,  18.19825957],\n",
+      "       [  0.82920898,  18.19700031],\n",
+      "       [  0.84300002,  18.1670803 ],\n",
+      "       [  0.84568087,  18.1630003 ],\n",
+      "       [  0.85700002,  18.13295377],\n",
+      "       [  0.86650002,  18.1630003 ],\n",
+      "       [  0.87100003,  18.16818674],\n",
+      "       [  0.88500003,  18.17010939],\n",
+      "       [  0.89305003,  18.1630003 ],\n",
+      "       [  0.89900003,  18.15382569],\n",
+      "       [  0.91300003,  18.16042454],\n",
+      "       [  0.91494447,  18.1630003 ],\n",
+      "       [  0.92700003,  18.17275956],\n",
+      "       [  0.93842108,  18.1630003 ],\n",
+      "       [  0.94100003,  18.1589664 ],\n",
+      "       [  0.94195288,  18.15920925]]), None), Path(array([[  0.98300003,  18.22614318],\n",
+      "       [  0.98262165,  18.23100033],\n",
+      "       [  0.98300003,  18.23173946],\n",
+      "       [  0.98475003,  18.23100033],\n",
+      "       [  0.98300003,  18.22614318]]), None)]\n"
      ]
     },
     {
@@ -620,7 +711,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-73-6f29dba14a8b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoints\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdat0\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mcset1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallsegs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mpoints\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[1;31m#for (elem1, elem2) in points:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-74-c0c5fafde8b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoints\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdat0\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mcset1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallsegs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mpoints\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[1;31m#for (elem1, elem2) in points:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'stat'"
      ]
     }
@@ -628,6 +719,7 @@
    "source": [
     "points = cset1.collections[1].get_paths()\n",
     "print(type(points))\n",
+    "print(points)\n",
     "dat0= cset1.allsegs[0][0]\n",
     "points.stat()\n",
     "\n",
