Tryin to make my fucntion work

--- a/Red-Clump-Location.ipynb
+++ b/Red-Clump-Location.ipynb
@@ -1119,35 +1119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filename: C:/Users/dougl/Desktop/smcw2-nd-intbgsub.fits\n",
-      "No.    Name         Type      Cards   Dimensions   Format\n",
-      "  0  PRIMARY     PrimaryHDU      18   (27207, 20790)   float32   \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Unexpected extra padding at the end of the file.  This padding may not be preserved when saving changes. [astropy.io.fits.header]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[71.200576517930898]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hdu.info()\n",
     "from astropy.wcs.utils import skycoord_to_pixel\n",
@@ -1157,23 +1133,23 @@
     "       and calculate their distances to the input point. This is to quicken \n",
     "       the processing time, since calculating the distances to all 5 million\n",
     "       stars would be unecessary.'''\n",
+    "    dist = []\n",
     "    for i in range(0,5156056):\n",
-    "        dist = []\n",
-    "        Vmag = catalog[\"Vmag\"][i]\n",
-    "        Imag = catalog[\"Imag\"][i]\n",
-    "        VImag = Vmag - Imag \n",
+    "        #Vmag = catalog[\"Vmag\"][i]\n",
+    "        #Imag = catalog[\"Imag\"][i]\n",
+    "        #VImag = Vmag - Imag \n",
     "        ra = catalog[\"RAJ2000\"][i]* u.deg\n",
     "        dec = catalog[\"DEJ2000\"][i]* u.deg\n",
     "        coord = SkyCoord(ra,dec,frame='fk5')\n",
-    "        (x0, y0) = skycoord_to_pixel(coord,w)\n",
+    "        x0, y0 = skycoord_to_pixel(coord,w)\n",
     "        xc = x0 - x\n",
     "        yc = y0 - y\n",
     "        rad = xc**2 + yc**2\n",
     "        if rad <= r**2:\n",
     "            dist.append(np.sqrt(rad))\n",
-    "            return dist\n",
+    "    return dist\n",
     "        \n",
-    "dist = get_distance_star(x=20540.63274116567,y=5040.678942515504,r=100)\n",
+    "dist = get_distance_star(x=20540.63274116567,y=5040.678942515504,r=50)\n",
     "print(dist)"
    ]
   },
