--- a/Red-Clump-Location.ipynb
+++ b/Red-Clump-Location.ipynb
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -717,6 +717,37 @@
      "text": [
       "C:\\Users\\dougl\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:6: RuntimeWarning: invalid value encountered in log10\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  id        xcenter       ...    aperture_sum   \n",
+      "              pix         ...                   \n",
+      "------ ------------------ ... ------------------\n",
+      "     1  20540.63274116567 ...    0.0299144130623\n",
+      "     2  20521.19194809172 ...    0.0726295363422\n",
+      "     3 20531.716529022127 ...     0.141092599687\n",
+      "     4  20515.89240887896 ...    0.0577155977983\n",
+      "     5 20578.413819220787 ...    0.0438408103614\n",
+      "     6 20517.066745073895 ...    0.0339459423203\n",
+      "     7  20523.36764356137 ...    0.0306907491726\n",
+      "     8 20486.823229532016 ...   -0.0164508280508\n",
+      "     9  20485.02173133492 ...    0.0366781419874\n",
+      "    10 20543.598333127808 ...   -0.0027252864231\n",
+      "   ...                ... ...                ...\n",
+      "351208 11164.018979139812 ...  -0.00663877388736\n",
+      "351209  11186.05737805507 ...    0.0089572103409\n",
+      "351210  11192.78343208734 ...     0.442995191757\n",
+      "351211  11192.06416988169 ...  -0.00193818042563\n",
+      "351212 11172.501799055899 ...  9.30895008504e-05\n",
+      "351213  11176.02442594219 ...    0.0114671061404\n",
+      "351214 11154.738564775242 ...    0.0714786477403\n",
+      "351215 11165.403287234467 ...    0.0802396757801\n",
+      "351216 11143.797787501562 ... -4.67330945158e-05\n",
+      "351217 11171.981168615977 ...    0.0317374569193\n",
+      "Length = 351217 rows\n"
+     ]
     }
    ],
    "source": [
@@ -725,7 +756,62 @@
     "RC_apertures = SkyCircularAperture(RC_positions, r)\n",
     "RC_phot_table = aperture_photometry(hdu[0], RC_apertures)\n",
     "RC_Flux = RC_phot_table['aperture_sum']\n",
-    "NUV_magnitude = -2.5*np.log10(RC_Flux) + 20.08"
+    "NUV_magnitude = -2.5*np.log10(RC_Flux) + 20.08\n",
+    "print(RC_phot_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      x             y      \n",
+      "------------- -------------\n",
+      "20540.6327412 5040.67894252\n",
+      "20521.1919481 4960.01080506\n",
+      " 20531.716529 5019.08623061\n",
+      "20515.8924089 4939.40394766\n",
+      "20578.4138192 5365.53580396\n",
+      "20517.0667451   5031.628018\n",
+      "20523.3676436 5080.81587516\n",
+      "20486.8232295 4884.21862099\n",
+      "20485.0217313 4891.74325664\n",
+      "20543.5983331 5257.90140757\n",
+      "          ...           ...\n",
+      "20196.5056209 5097.49534015\n",
+      "20581.4946953 7355.16209132\n",
+      "20724.8459243 8195.59666194\n",
+      "20721.3506824  8176.8708004\n",
+      "20642.3981867 7714.66469855\n",
+      "20331.5862911 5892.58004059\n",
+      "20536.6745284 7096.67282468\n",
+      " 20290.676479 5655.58661595\n",
+      "20614.7124079 7557.26282714\n",
+      "20555.3238683 7209.81338058\n",
+      "20700.2378709 8060.86021212\n",
+      "Length = 999 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = Table()\n",
+    "x = []\n",
+    "y = []\n",
+    "RCx = RC_phot_table['xcenter'].value\n",
+    "RCy = RC_phot_table['ycenter'].value\n",
+    "for i in range (0,999):\n",
+    "    x.append(RCx[i])\n",
+    "    y.append(RCy[i])\n",
+    "\n",
+    "t['x'] = x\n",
+    "t['y'] = y\n",
+    "print(t)"
    ]
   },
   {
@@ -775,11 +861,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-89-3af53628b480>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mIso_RC\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m \u001b[0mIso_RC\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mIsolate_RC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'x'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'y'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mIso_RC\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-89-3af53628b480>\u001b[0m in \u001b[0;36mIsolate_RC\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mskycoord_to_pixel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcoord\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m351216\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m         \u001b[0mboolean\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_smallest_StarDistance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mboolean\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0mx_center\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-89-3af53628b480>\u001b[0m in \u001b[0;36mget_smallest_StarDistance\u001b[0;34m(x, y, x0, y0)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mdist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5156056\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mxc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx0\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m         \u001b[0myc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0my0\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mxc\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0myc\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from astropy.wcs.utils import skycoord_to_pixel\n",
     "\n",
@@ -789,37 +890,68 @@
     "    star in the SMC. This function simply returns a True or False boolean depending if the closest star to the RC is\n",
     "    more than 5 pixels away (The RC is isolated, returns True); or if it is less (RC not isolated, returns False.)'''\n",
     "    dist = []\n",
+    "    x0 = x0.sort()\n",
+    "    y0 = y0.sort()\n",
     "    for i in range(0,5156056):\n",
     "        xc = x0[i] - x\n",
     "        yc = y0[i] - y\n",
     "        rad = xc**2 + yc**2\n",
-    "        if rad <= 20**2:\n",
+    "        if rad <= 10**2:\n",
     "            dist.append(np.sqrt(rad))\n",
     "    \n",
     "    lowest_index = np.argmin(dist)\n",
-    "    if dist[lowest_index] >= 5:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
+    "    \n",
+    "    if dist[lowest_index] >= 5:  #Isolated\n",
+    "        result = True\n",
+    "    else: #Not Isolated\n",
+    "        result = False\n",
+    "    return result\n",
     "\n",
     "def Isolate_RC(x,y):\n",
     "    '''(x,y) is an array for every RC-star's position. This function simply will add the coordinates of \n",
     "    all Isolated RC-stars (the ones that returned True) into a table. The function is very slow \n",
     "    probably because it has a for loop inside of another for loop. I am thinking about how to fix that still.'''\n",
-    "    Iso_RC = Table()\n",
-    "    x = x.value\n",
-    "    y = y.value\n",
+    "    x_center = []\n",
+    "    y_center = []\n",
+    "    #x = x.value\n",
+    "    #y = y.value\n",
     "    coord = SkyCoord(ra = catalog['RAJ2000'], dec= catalog['DEJ2000'], frame='fk5')\n",
     "    x0, y0 = skycoord_to_pixel(coord,w)\n",
     "    for i in range(0,351216):\n",
-    "        boolean = get_smallest_StarDistance(x[i],y[i],x0,y0)\n",
-    "        if boolean == True:\n",
-    "            Iso_RC['xcenter'] += x[i]\n",
-    "            Iso_RC['ycenter'] += y[i]\n",
+    "        boolean = get_smallest_StarDistance(x = x[i],y = y[i],x0 = x0,y0 = y0)\n",
+    "        if boolean:\n",
+    "            x_center.append(x[i])\n",
+    "            y_center.append(y[i])\n",
+    "    Iso_RC = Table()\n",
+    "    Iso_RC['xcenter'] = x_center\n",
+    "    Iso_RC['ycenter'] = y_center\n",
     "    return Iso_RC\n",
     "    \n",
-    "Iso_RC = Isolate_RC(x = RC_phot_table['xcenter'], y = RC_phot_table['ycenter'])\n",
+    "Iso_RC = Isolate_RC(x = t['x'], y = t['y'])\n",
     "print(Iso_RC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "'''def points_around(x0, y0, x_smc, y_smc):  #assumes (x_smc, y_smc) are sorted\n",
+    "    midpoint = len(x_smc)//2\n",
+    "    x_around = []\n",
+    "    y_around = []\n",
+    "    \n",
+    "    if x_smc[midpoint]-x0 >10 and y_smc[midpoint]-y0 >10:\n",
+    "        return points_around(x0, y0, x_smc[:midpoint], y_smc[:midpoint])\n",
+    "    elif x_smc[midpo]\n",
+    "    else:\n",
+    "        if item<alist[midpoint]:\n",
+    "            return binarySearch(alist[:midpoint],item)\n",
+    "        else:\n",
+    "            return binarySearch(alist[midpoint+1:],item)'''     #trying to figure this one out#"
    ]
   },
   {
