match_coordinates_sky is a blessing!

--- a/Red-Clump-Location.ipynb
+++ b/Red-Clump-Location.ipynb
@@ -933,6 +933,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  idx          d2d               d3d       \n",
+      "               deg                         \n",
+      "------- ----------------- -----------------\n",
+      "     28  0.00190245096659 3.32040332233e-05\n",
+      "     24  0.00220377740169 3.84631716381e-05\n",
+      "     57  0.00211960356331 3.69940610146e-05\n",
+      "     36  0.00219851428978 3.83713130065e-05\n",
+      "    204  0.00303987505017 5.30558284685e-05\n",
+      "    147 0.000986148962937 1.72115463182e-05\n",
+      "    214  0.00164388966721 2.86912872314e-05\n",
+      "    240  0.00146862976395  2.5632424873e-05\n",
+      "    292  0.00218416726185 3.81209101313e-05\n",
+      "    278  0.00164121558946 2.86446157702e-05\n",
+      "    ...               ...               ...\n",
+      "5155712 0.000693128266758 1.20973703935e-05\n",
+      "5155744  0.00228540820561 3.98878979373e-05\n",
+      "5155714 0.000397748209843 6.94201585565e-06\n",
+      "5155797  0.00352297613894  6.1487533084e-05\n",
+      "5155705  0.00325977463523   5.689380025e-05\n",
+      "5155844 0.000977573483657 1.70618759699e-05\n",
+      "5155837  0.00127804996407 2.23061798776e-05\n",
+      "5155907  0.00166332236589 2.90304518058e-05\n",
+      "5155914 0.000712791378379 1.24405564325e-05\n",
+      "5155949 0.000990954807223 1.72954241243e-05\n",
+      "Length = 351217 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "from astropy.coordinates import match_coordinates_sky\n",
+    "coord = SkyCoord(ra = catalog['RAJ2000'], dec= catalog['DEJ2000'], frame='fk5')\n",
+    "idx, d2d, d3d = match_coordinates_sky(RC_positions, coord, nthneighbor=2)\n",
+    "\n",
+    "table = Table()\n",
+    "table['idx'] = idx\n",
+    "table['d2d'] = d2d\n",
+    "table['d3d'] = d3d\n",
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
