--- a/Red-Clump-Location.ipynb
+++ b/Red-Clump-Location.ipynb
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -942,31 +942,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  idx          d2d               d3d       \n",
-      "               deg                         \n",
-      "------- ----------------- -----------------\n",
-      "     28  0.00190245096659 3.32040332233e-05\n",
-      "     24  0.00220377740169 3.84631716381e-05\n",
-      "     57  0.00211960356331 3.69940610146e-05\n",
-      "     36  0.00219851428978 3.83713130065e-05\n",
-      "    204  0.00303987505017 5.30558284685e-05\n",
-      "    147 0.000986148962937 1.72115463182e-05\n",
-      "    214  0.00164388966721 2.86912872314e-05\n",
-      "    240  0.00146862976395  2.5632424873e-05\n",
-      "    292  0.00218416726185 3.81209101313e-05\n",
-      "    278  0.00164121558946 2.86446157702e-05\n",
-      "    ...               ...               ...\n",
-      "5155712 0.000693128266758 1.20973703935e-05\n",
-      "5155744  0.00228540820561 3.98878979373e-05\n",
-      "5155714 0.000397748209843 6.94201585565e-06\n",
-      "5155797  0.00352297613894  6.1487533084e-05\n",
-      "5155705  0.00325977463523   5.689380025e-05\n",
-      "5155844 0.000977573483657 1.70618759699e-05\n",
-      "5155837  0.00127804996407 2.23061798776e-05\n",
-      "5155907  0.00166332236589 2.90304518058e-05\n",
-      "5155914 0.000712791378379 1.24405564325e-05\n",
-      "5155949 0.000990954807223 1.72954241243e-05\n",
-      "Length = 351217 rows\n"
+      "   xcenter       ycenter   \n",
+      "------------- -------------\n",
+      " 20531.716529 5019.08623061\n",
+      "20515.8924089 4939.40394766\n",
+      "20578.4138192 5365.53580396\n",
+      "20517.0667451   5031.628018\n",
+      "20543.5983331 5257.90140757\n",
+      "20549.7887896 5348.70698575\n",
+      "20566.1910543 5449.50482515\n",
+      "20481.3181061 4976.26034432\n",
+      "20464.1748109 4926.12996761\n",
+      "20494.7679137 5101.67267787\n",
+      "          ...           ...\n",
+      "11188.0821012 6058.26304903\n",
+      "11167.8699656 6140.59597856\n",
+      "11201.9672253 5510.06142383\n",
+      "11200.5486473 5503.16968784\n",
+      "11172.8163781 5833.66634662\n",
+      "11145.6551237  6193.3877196\n",
+      "11154.4184576 6040.94713501\n",
+      " 11155.199881 6021.02663477\n",
+      "11192.7834321  5445.9384354\n",
+      "11172.5017991  5634.2985352\n",
+      "11176.0244259 5542.68491325\n",
+      "Length = 12177 rows\n"
      ]
     }
    ],
@@ -979,7 +979,31 @@
     "table['idx'] = idx\n",
     "table['d2d'] = d2d\n",
     "table['d3d'] = d3d\n",
-    "print(table)"
+    "#print(table)\n",
+    "\n",
+    "def Isolate_RC(x, y):\n",
+    "    x0, y0 = skycoord_to_pixel(coord,w)\n",
+    "    x = x.value\n",
+    "    y = y.value\n",
+    "    j = 0\n",
+    "    x_iso = []\n",
+    "    y_iso = []\n",
+    "    for i in idx:\n",
+    "        if j < len(x):\n",
+    "            xc = x0[i] - x[j]\n",
+    "            yc = y0[i] - y[j]\n",
+    "            rad = xc**2 + yc**2\n",
+    "            j = j + 1\n",
+    "        if rad >= 5**2:\n",
+    "            x_iso.append(x[j])\n",
+    "            y_iso.append(y[j])\n",
+    "    RC_iso = Table()\n",
+    "    RC_iso['xcenter'] = x_iso\n",
+    "    RC_iso['ycenter'] = y_iso\n",
+    "    return RC_iso\n",
+    "\n",
+    "RC_iso = Isolate_RC(x = RC_phot_table['xcenter'], y = RC_phot_table['ycenter'])\n",
+    "print(RC_iso)"
    ]
   },
   {
