--- a/Red-Clump-Location.ipynb
+++ b/Red-Clump-Location.ipynb
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -766,7 +766,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\dougl\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:18: RuntimeWarning: invalid value encountered in greater_equal\n"
+      "C:\\Users\\dougl\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:19: RuntimeWarning: invalid value encountered in greater_equal\n"
      ]
     },
     {
@@ -775,29 +775,29 @@
      "text": [
       "   xcenter       ycenter      idx  \n",
       "------------- ------------- -------\n",
+      "20521.1919481 4960.01080506      24\n",
+      " 20531.716529 5019.08623061      57\n",
+      "20515.8924089 4939.40394766      36\n",
       "20578.4138192 5365.53580396     204\n",
-      "20479.0342761 5397.28305667    2175\n",
-      " 20609.657201 6412.01587277    3816\n",
-      " 20115.261157 5225.90989951   34849\n",
-      "20059.6455476 5041.63528458   38539\n",
-      "20592.8471982  8439.0670087   41855\n",
-      "20836.9600998 10989.2439619   72219\n",
-      "19922.4468088  5483.5478851   79675\n",
-      "20794.0464928  10934.356909   79986\n",
-      "20800.5406637 11103.4406149   84632\n",
+      "20523.3676436 5080.81587516     214\n",
+      "20485.0217313 4891.74325664     292\n",
+      "20605.2400259 5658.19406074     415\n",
+      "20549.7887896 5348.70698575     473\n",
+      "20566.1910543 5449.50482515     484\n",
+      "20481.3181061 4976.26034432     452\n",
       "          ...           ...     ...\n",
-      "11684.9352982 8566.09179383 5101630\n",
-      "11523.5650139 11162.6889669 5104726\n",
-      "11726.3117913 7561.35532832 5107269\n",
-      "11733.4491209  7138.9960417 5107897\n",
-      "11751.2705763  5569.5333538 5122296\n",
-      "11563.7779767 7672.30864699 5128812\n",
-      "11587.0621441 7078.05057273 5131460\n",
-      "11614.9726155 5992.51111546 5135253\n",
-      "11480.0583282 7106.81873504 5141949\n",
-      "11370.9221854 8452.69030645 5143198\n",
-      "11516.4507238  6084.1628649 5143141\n",
-      "Length = 594 rows\n"
+      "11170.2322668 5961.50124127 5155474\n",
+      "11176.5205943 5846.74375779 5155543\n",
+      "11184.8612466 5678.56047876 5155586\n",
+      "11172.8163781 5833.66634662 5155736\n",
+      "11145.6551237  6193.3877196 5155540\n",
+      "11172.2087606 5795.32706438 5155690\n",
+      "11164.0189791  5857.7131186 5155712\n",
+      "11186.0573781 5554.11446558 5155744\n",
+      "11192.0641699 5432.47861761 5155797\n",
+      "11172.5017991  5634.2985352 5155705\n",
+      "11171.9811686 5418.73577912 5155949\n",
+      "Length = 82872 rows\n"
      ]
     }
    ],
@@ -811,6 +811,7 @@
     "    x = x.value\n",
     "    y = y.value\n",
     "    j = 0\n",
+    "    #RC_iso = []\n",
     "    x_iso = []\n",
     "    y_iso = []\n",
     "    idx_iso = []\n",
@@ -819,7 +820,8 @@
     "            xc = x0[i] - x[j]\n",
     "            yc = y0[i] - y[j]\n",
     "            rad = xc**2 + yc**2\n",
-    "            if rad >= 7**2 and catalog['Umag'][i] >= 20:\n",
+    "            if rad >= 5**2 or catalog['Umag'][i] >= 20:\n",
+    "                #RC_iso.append((x[j],y[j]))\n",
     "                x_iso.append(x[j])\n",
     "                y_iso.append(y[j])\n",
     "                idx_iso.append(i)\n",
